@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="html5.appcache">
+<html manifest="html5.appcache2">
 <head>
 		<meta charset="utf-8">
 		<title>Domoticz</title>
