@@ -52,6 +52,7 @@ Version 2.0.xxxx (xxxx 2015)
 - Changed: Notification system (big thanks to chimit!)
 - Implemented: SMS Notifications
 - Solved: Wind Graph generation could cause a crash
+- Implemented: Option to Enable/Disable notification systems
 
 Version 2.0.2284 (February 22th 2015)
 - Fixed: Firefox, RGBW/Setpoint popup
